@@ -1,9 +1,9 @@
-graphics = europe.20km.eps fenscan_is-17.eps fenscan-gthf_is-17.eps fenscan_bvel-17.eps fenscan-gthf_bvel-17.eps profile-20.eps profile-comp.eps
+graphics = europe.20km.eps fenscan_is-17.eps fenscan-gthf_is-17.eps fenscan_bvel-17.eps fenscan-gthf_bvel-17.eps profile-20.eps profile-comp.eps profileTs.eps
 
 data = fenscan.nc fenscan-gthf.nc 
 if BUILD_EXT_EROSION
  data += fenscan-erosion.nc
- graphics += fenscan-seds.eps
+ graphics += fenscan-seds.eps fenscan-seds_prof.eps
 endif
 
 BUILT_SOURCES = 
@@ -21,17 +21,23 @@ fenscan-erosion.nc:	fenscan-erosion.config
 			$(PYTHON) $(top_srcdir)/scripts/glide_launch.py $(LAUNCH_OPTIONS) -m $(top_builddir)/example-drivers/eis/src/eis_erosion @AM_SGE_OPTS@ $(SGE_OPTS) $<
 
 europe.20km.eps:	europe.20km.nc
-			$(plotGCvar) -v topg --not_projected -p prof_a.data --legend=v $^ -o $@
+			$(plotGCvar) -v topg --not_projected -p $(srcdir)/prof_a.data --legend=v $^ -o $@
 %_is-17.eps:		%.nc
 			$(plotGCvar) -v is -t -17 -c thk --land -i is --legend=v $^ -o $@
 %_bvel-17.eps:		%.nc
 			$(plotGCvar) -v bvel -t -17 -c thk --land --vectors bvel --legend=v $^ -o $@
 
 profile-20.eps:		fenscan.hot.nc
-			$(plotGCProfile) -p prof_a.data --not_projected --legend -v temp -v bmlt  -t -20 $^ -o $@
+			$(plotGCProfile) -p $(srcdir)/prof_a.data --not_projected --legend -v temp -v bmlt  -t -20 $^ -o $@
 
 profile-comp.eps:	fenscan.hot.nc fenscan-gthf.hot.nc
-			$(plotGCProfile) -p prof_a.data --not_projected -v is -v bheatflx -v bmlt -t -20 --size 3 3.5 $^ -o $@
+			$(plotGCProfile) -p $(srcdir)/prof_a.data --not_projected -v is -v bheatflx -v bmlt -t -20 --size 3 3.5 $^ -o $@
+
+profileTs.eps:		fenscan.nc
+			$(plotGCProfileTS) -p $(srcdir)/prof_a.data --not_projected -v is -c thk  --title -e $(top_srcdir)/PyGC/data/stages $^ -o $@
 
 fenscan-seds.eps:	fenscan-erosion.nc
 			$(plotGCseds) -T -1 --legend v $^ -o $@
+
+fenscan-seds_prof.eps:	fenscan-erosion.nc
+			$(plotGCSedsProfile) -p $(srcdir)/prof_a.data --not_projected -t 0 -e $(top_srcdir)/PyGC/data/stages $^ -o $@
